# TicketGuard

./: .dockerignore  .gitignore  Dockerfile  QUICKSTART.md  README.md  README.zh.md  data-sources.md  requirements.txt  roadmap.md  ticketguard-architecture.html  vercel.json
api/: index.py
backend/: .env.example  __init__.py  agent.py  pyproject.toml
backend/core/: __init__.py  agent.py  config.py  preprocess.py  prompt.py  state_keys.py
backend/features/price/: __init__.py  analysis.py  browser_visibility.py  capture.py  fx.py  market_resolver.py  service.py  stubhub.py  stubhub_seats.json  test_analysis.py  test_browser_visibility.py  test_service.py  ticketmaster.py
backend/features/seats/: __init__.py  agent.py  service.py  test_agent.py  test_service.py
backend/features/security/: __init__.py  orchestrator.py  scoring.py  test_orchestrator.py  test_scoring.py
backend/features/security/agent/: __init__.py  agent.py  browser_stream.py  osint_stream.py  osint_subagent.py  osint_tools.py  test_osint_observe.py
backend/features/security/agent/browser_check/: README.md  __init__.py  browser_cleanup.py  browser_runner.py  browser_security_tool.py  domain_rules.py  gemini_client.py  prompts.py  schemas.py
backend/features/security/agent/osint/: __init__.py  prompt.py  subagent.py  test_observe.py
backend/features/security/pipeline/: __init__.py  constants.py  http_utils.py  intelowl.py  scoring.py  spiderfoot.py  threatintel.py
backend/features/security/pipeline/sources/: __init__.py  checkphish.py  crtsh.py  ipgeo.py  metadefender.py  openphish.py  phishstats.py  rdap.py  safe_browsing.py  sucuri.py  tranco.py  urlhaus.py  virustotal.py  wayback.py
backend/observability/: judge.py  telemetry.py  test_judge.py  test_telemetry.py  test_trace_utils.py  trace_utils.py
backend/seats/: README.md  avfms_scraper.py  match_tickets.py  serve_images.py  test_match_tickets.py
backend/seats/seats-data/photos_avfms/arrowhead_stadium/: rename_map.csv
backend/seats/seats-data/photos_avfms/at_and_t_stadium/: rename_map.csv
backend/seats/seats-data/photos_avfms/bc_place/: rename_map.csv
backend/seats/seats-data/photos_avfms/bmo_field/: rename_map.csv
backend/seats/seats-data/photos_avfms/estadio_akron/: rename_map.csv
backend/seats/seats-data/photos_avfms/estadio_banorte/: rename_map.csv
backend/seats/seats-data/photos_avfms/estadio_bbva/: rename_map.csv
backend/seats/seats-data/photos_avfms/gillette_stadium/: rename_map.csv
backend/seats/seats-data/photos_avfms/hard_rock_stadium/: rename_map.csv
backend/seats/seats-data/photos_avfms/levi_s_stadium/: rename_map.csv
backend/seats/seats-data/photos_avfms/lincoln_financial_field/: rename_map.csv
backend/seats/seats-data/photos_avfms/lumen_field/: rename_map.csv
backend/server/: app.py
backend/training/: __init__.py  audit_fn.py  dataset.py  eval_baseline.py  eval_security.py  gen_price_fixtures.py  gepa_loop.py  metric.py  plots.py  price_audit.py  price_dataset.py  price_train.py  reflection_lm.py  runner.py  security_audit.py  security_train.py  test_audit_fn.py  test_dataset.py  test_metric.py  test_price_audit.py  test_price_dataset.py  test_runner.py  test_tracking.py  tracking.py  train.py
backend/training/data/: labeled_urls.example.jsonl  labeled_urls.jsonl
backend/training/data/plots/: gepa-model-comparison.html  price-gepa-curve.html
backend/training/data/price_cache/: gt_wc_philly.json  gt_wc_seattle.json  sg_wc_boston.json  sg_wc_miami.json  sh_wc_houston.json  sh_wc_match23.json  sh_wc_match31.json  sh_wc_mexico.json  tm_wc_final.json  tm_wc_guadalajara.json  tm_wc_monterrey.json  tm_wc_toronto.json  vs_wc_atlanta.json  vs_wc_semi.json  vs_wc_vancouver.json
backend/training/data/runs/: price-gepa.jsonl
(+111 files in other folders)
