[project]
name = "ticketguard-backend"
version = "0.1.0"
description = "TicketGuard backend — ADK agent that audits a ticket listing URL across seat / price / security."
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.0.0",
    "requests>=2.32.0",
    # Layer 2 (browser-based security check) is REQUIRED, not optional: the
    # grey-zone escalation drives a real browser via browser-use and reads pages
    # with Gemini vision. After installing, run `playwright install chromium` to
    # download the browser binary.
    "browser-use>=0.5.0",
    "google-genai>=1.0.0",
    "tldextract>=5.0.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
# Browser control for full preprocess (screenshots). Optional for the skeleton.
browser = ["selenium>=4.20.0"]
# Security detectors use only `requests` (already a core dependency).
security = []
# Arize observability (partner integration).
observability = [
    "arize-otel>=0.7.0",
    "openinference-instrumentation-google-adk>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
