[project]
name = "ticketguard-backend"
version = "0.1.0"
description = "TicketGuard backend — ADK agent that audits a ticket listing URL across seat / price / security."
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.0.0",
    "requests>=2.32.0",
    "browser-use>=0.13,<0.14",
    "google-genai>=1.0.0",
    "tldextract>=5.0.0",
    "Pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
    "opentelemetry-exporter-otlp-proto-http>=1.36,<=1.41.1",
    "openinference-instrumentation-google-adk>=0.1.0",
    "openinference-instrumentation-google-genai>=0.1.0",
]

[project.optional-dependencies]
# Browser control for full preprocess (screenshots). Optional for the skeleton.
browser = ["selenium>=4.20.0"]
# Security detectors use only `requests` (already a core dependency).
security = []

[tool.setuptools.packages.find]
where = ["."]
